--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ rust:
 
 matrix:
   include:
-  - rust: 1.24.0  # Locking down for consistent behavior
+  - rust: 1.24.0  # `stable`: Locking down for consistent behavior
     env: RUSTFMT
     install:
     - rustup component add rustfmt-preview
