--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
 sudo: false
 language: rust
 rust:
-- 1.22.0  # Two releases back
+- 1.22.0  # Oldest supported
 - stable
 - beta
 - nightly
 
 matrix:
   include:
-  - rust: 1.24.0  # `stable`: Locking down for consistent behavior
-    env: RUSTFMT
+  - env: RUSTFMT
+    rust: 1.24.0  # `stable`: Locking down for consistent behavior
     install:
     - rustup component add rustfmt-preview
     script:
